--- a/home/ags/styles/top-bar.scss
+++ b/home/ags/styles/top-bar.scss
@@ -162,7 +162,7 @@ window.Bar {
             }
 
             &.critical {
-              border: 2px solid theme.gtkalpha(theme.$error, 0.3);
+              border: 2px solid theme.gtkalpha(theme.$error, 0.4);
             }
           }
         }
